fix(auth-assimetrica): alterado response para retornar status, alterado swagger para pedidos do usuario
